# winds

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
winds/: __init__.py  dataset.py  downsize_images.py  features.py  plots.py
winds/modeling/: predict.py  train.py
